--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,9 @@ h1{
     border-radius: 25px;
     grid-column: span 2;
 }
+.green{
+    background-color: rgb(70, 165, 70);
+}
+.error-message{
+    color: red;
+}
